--- a/PaceLogger.Core/PaceLogger.Core.csproj
+++ b/PaceLogger.Core/PaceLogger.Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculation\Activity.cs" />
     <Compile Include="Converter\Tcx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\Tcx.cs" />
