--- a/PaceLogger.Web/PaceLogger.Web.csproj
+++ b/PaceLogger.Web/PaceLogger.Web.csproj
@@ -171,6 +171,7 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\Activtiy.jsx" />
     <Content Include="Scripts\Components\Laps.jsx" />
+    <Content Include="Scripts\Components\ValueFormatter.jsx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
