--- a/PaceLogger.Web/Views/web.config
+++ b/PaceLogger.Web/Views/web.config
@@ -15,9 +15,11 @@
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Optimization" />        
         <add namespace="System.Web.Routing" />
         <add namespace="PaceLogger.Web" />
-      <add namespace="React.Web.Mvc" /></namespaces>
+        <add namespace="React.Web.Mvc" />
+      </namespaces>
     </pages>
   </system.web.webPages.razor>
 
