--- a/PaceLogger.Web/packages.config
+++ b/PaceLogger.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Core" version="2.2.0" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Msie" version="2.2.0" targetFramework="net452" />
@@ -14,6 +15,7 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
@@ -30,4 +32,5 @@
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net452" />
   <package id="VroomJs" version="1.2.3" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
