--- a/PaceLogger.Web/PaceLogger.Web.csproj
+++ b/PaceLogger.Web/PaceLogger.Web.csproj
@@ -232,6 +232,7 @@
     </Content>
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Activity\Index.cshtml" />
+    <Content Include="bower.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
