Charts.jsx includiert

--- a/PaceLogger.Web/PaceLogger.Web.csproj
+++ b/PaceLogger.Web/PaceLogger.Web.csproj
@@ -203,6 +203,7 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Scripts\Activtiy.jsx" />
+    <Content Include="Scripts\Components\Charts.jsx" />
     <Content Include="Scripts\Components\Laps.jsx" />
     <Content Include="Scripts\Components\Map.jsx" />
     <Content Include="Scripts\Components\ValueFormatter.jsx" />
