Model und Datenbnk erweitert Serializer importiert jetzt auch Runtastic TCX Files

--- a/PaceLogger.Console/App.config
+++ b/PaceLogger.Console/App.config
@@ -21,6 +21,6 @@
   </entityFramework>
   
     <connectionStrings>
-      <add name="DatabaseContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localDB)\MSSQLLocalDB;Initial Catalog=PaceLogger;Integrated Security=True;Pooling=False" />
+      <add name="DatabaseContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Visual Studio 2015\PaceLogger\PaceLogger.Core\Database.mdf;Integrated Security=True" />
   </connectionStrings>
 </configuration>
