--- a/PaceLogger.Core/PaceLogger.Core.csproj
+++ b/PaceLogger.Core/PaceLogger.Core.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>PaceLogger.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -53,6 +68,18 @@
     <Compile Include="Calculation\Trackpoints.cs" />
     <Compile Include="Converter\Tcx.cs" />
     <Compile Include="Converter\Trackpoints.cs" />
+    <Compile Include="Migrations\201701081028388_InitialCreate.cs" />
+    <Compile Include="Migrations\201701081028388_InitialCreate.Designer.cs">
+      <DependentUpon>201701081028388_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701081101461_UserAttributes.cs" />
+    <Compile Include="Migrations\201701081101461_UserAttributes.Designer.cs">
+      <DependentUpon>201701081101461_UserAttributes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701081719140_AddCaloriesAndSport.cs" />
+    <Compile Include="Migrations\201701081719140_AddCaloriesAndSport.Designer.cs">
+      <DependentUpon>201701081719140_AddCaloriesAndSport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Activity.cs" />
@@ -71,6 +98,35 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Database.mdf" />
+    <None Include="Database_log.ldf">
+      <DependentUpon>Database.mdf</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201701081028388_InitialCreate.resx">
+      <DependentUpon>201701081028388_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701081101461_UserAttributes.resx">
+      <DependentUpon>201701081101461_UserAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701081719140_AddCaloriesAndSport.resx">
+      <DependentUpon>201701081719140_AddCaloriesAndSport.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
