--- a/PaceLogger.Console/PaceLogger.Console.csproj
+++ b/PaceLogger.Console/PaceLogger.Console.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConvertFitToTcx.cs" />
+    <Compile Include="ImportTcxInDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
