--- a/PaceLogger.Web/Web.config
+++ b/PaceLogger.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DatabaseContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localDB)\MSSQLLocalDB;Initial Catalog=PaceLogger;Integrated Security=True;Pooling=False" />
+    <add name="DatabaseContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Visual Studio 2015\PaceLogger\PaceLogger.Core\Database.mdf;Integrated Security=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
